--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -14,12 +14,14 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
+					<th></th>
 					<th>Customer</th>
 					<th>Orders</th>
 				</tr>
 
 				{% for customer in customers %}
 				<tr>
+					<th><a href="{% url 'customer' customer.id %}">View</a></th>
 					<td>{{customer.name}}</td>
 					<td>{{customer.phone}}</td>
 				</tr>
@@ -48,8 +50,8 @@
 					<td>{{order.product}}</td>
 					<td>{{order.date_created}}</td>
 					<td>{{order.status}}</td>
-					<td><a href="">Update</a></td>
-					<td><a href="">Delete</a></td>
+					<td><a class="btn btn-sm btn-info" href="">Update</a></td>
+					<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
 				</tr>
 				{% endfor %}
 
