--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -21,7 +21,7 @@
 
 				{% for customer in customers %}
 				<tr>
-					<th><a href="{% url 'customer' customer.id %}">View</a></th>
+					<th><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></th>
 					<td>{{customer.name}}</td>
 					<td>{{customer.phone}}</td>
 				</tr>
@@ -35,7 +35,6 @@
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}"">Create Order</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
