--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -41,6 +41,7 @@
   <div class="col">
     <div class="card card-body">
       <form method="get">
+        {{myFilter.form}}
         <button class="btn btn-primary" type="submit">Search</button>
       </form>
     </div>
@@ -54,7 +55,7 @@
       <table class="table table-sm">
         <tr>
           <th>Product</th>
-          <th>Category</th>
+          <th>Note</th>
           <th>Date Orderd</th>
           <th>Status</th>
           <th>Update</th>
@@ -64,7 +65,7 @@
         {% for order in orders%}
         <tr>
           <td>{{order.product}}</td>
-          <td>{{order.product.category}}</td>
+          <td>{{order.note}}</td>
           <td>{{order.date_created}}</td>
           <td>{{order.status}}</td>
           <td>
